--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 12px;
+  gap: 10px;
 }
 
-/* barra búsqueda */
+/* búsqueda */
 #searchBar {
   display: flex;
-  gap: 8px;
+  gap: 6px;
 }
 
 input {
@@ -35,6 +35,24 @@ input {
   width: 230px;
   border: 2px solid black;
   background: #f2f2f2;
+}
+
+#results {
+  width: 230px;
+  max-height: 120px;
+  overflow-y: auto;
+  background: white;
+  border: 2px solid black;
+  font-size: 14px;
+}
+
+.resultItem {
+  padding: 6px;
+  cursor: pointer;
+}
+
+.resultItem:hover {
+  background: #ddd;
 }
 
 /* HUD */
@@ -58,7 +76,6 @@ input {
   height: 100%;
 }
 
-/* ocultar controles originales */
 .maptiler-control-container,
 .maplibregl-control-container,
 .maplibregl-ctrl,
@@ -94,7 +111,7 @@ input {
   border-radius: 20px;
 }
 
-/* botones HUD */
+/* botones */
 .hudButtons {
   display: flex;
   gap: 12px;
@@ -106,18 +123,7 @@ button {
   background: black;
   border: none;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
-}
-
-button svg {
-  width: 26px;
-  height: 26px;
-  stroke: white;
-  fill: none;
-  stroke-width: 2.5;
 }
 </style>
 </head>
@@ -127,14 +133,11 @@ button svg {
 <div id="app">
 
 <div id="searchBar">
-  <input id="address" placeholder="Destino…">
-  <button onclick="searchAddress()">
-    <svg viewBox="0 0 24 24">
-      <circle cx="11" cy="11" r="6"></circle>
-      <line x1="16" y1="16" x2="22" y2="22"></line>
-    </svg>
-  </button>
+  <input id="address" placeholder="Buscar dirección…">
+  <button onclick="searchAddress()">🔍</button>
 </div>
+
+<div id="results"></div>
 
 <div id="hud">
   <div id="mapContainer">
@@ -147,28 +150,12 @@ button svg {
             stroke-width="5"/>
     </svg>
   </div>
-
   <div id="north">N</div>
 </div>
 
 <div class="hudButtons">
-
-  <!-- perspectiva -->
-  <button onclick="togglePerspective()">
-    <svg viewBox="0 0 24 24">
-      <circle cx="12" cy="12" r="8"></circle>
-      <line x1="12" y1="4" x2="12" y2="20"></line>
-    </svg>
-  </button>
-
-  <!-- centrar -->
-  <button onclick="centerGPS()">
-    <svg viewBox="0 0 24 24">
-      <circle cx="12" cy="12" r="8"></circle>
-      <circle cx="12" cy="12" r="2"></circle>
-    </svg>
-  </button>
-
+  <button onclick="togglePerspective()">🧭</button>
+  <button onclick="centerGPS()">🎯</button>
 </div>
 
 </div>
@@ -176,18 +163,18 @@ button svg {
 <script src="https://cdn.maptiler.com/maptiler-sdk-js/v2.2.0/maptiler-sdk.umd.js"></script>
 
 <script>
-maptilersdk.config.apiKey = "V8DFSo7qMSgAu0JLPgjH";
+maptilersdk.config.apiKey = "TU_API_KEY_AQUI"; // <-- cambia por tu key
 
 let userLocation = null;
 let perspective = false;
 const player = document.getElementById("player");
+const resultsDiv = document.getElementById("results");
 
 const map = new maptilersdk.Map({
   container: 'map',
-  style: 'https://api.maptiler.com/maps/2b36665a-5454-4b57-9676-ff47dc5d11cc/style.json',
+  style: 'streets',
   center: [-70.648729, -33.447173],
   zoom: 16,
-  pitch: 0,
   attributionControl: false
 });
 
@@ -202,61 +189,38 @@ function centerGPS() {
 
 function togglePerspective() {
   perspective = !perspective;
-
-  map.easeTo({
-    pitch: perspective ? 60 : 0,
-    duration: 600
-  });
-
+  map.easeTo({ pitch: perspective ? 60 : 0, duration: 600 });
   player.classList.toggle("perspective", perspective);
 }
 
 async function searchAddress() {
-  if (!userLocation) return;
-
   const text = document.getElementById("address").value;
+  resultsDiv.innerHTML = "Buscando…";
 
-  const geo = await fetch(
-    `https://api.maptiler.com/geocoding/${encodeURIComponent(text)}.json?key=${maptilersdk.config.apiKey}`
-  ).then(r => r.json());
+  try {
+    const geo = await fetch(
+      `https://api.maptiler.com/geocoding/${encodeURIComponent(text)}.json?key=${maptilersdk.config.apiKey}`
+    ).then(r => r.json());
 
-  if (!geo.features.length) return;
+    resultsDiv.innerHTML = "";
 
-  const dest = geo.features[0].center;
+    geo.features.forEach(f => {
+      const item = document.createElement("div");
+      item.className = "resultItem";
+      item.innerText = f.place_name;
+      item.onclick = () => selectDestination(f.center);
+      resultsDiv.appendChild(item);
+    });
 
-  new maptilersdk.Marker({ color: "white" })
-    .setLngLat(dest)
-    .addTo(map);
-
-  drawRoute(userLocation, dest);
+  } catch (e) {
+    resultsDiv.innerHTML = "Error buscando dirección";
+    console.error(e);
+  }
 }
 
-async function drawRoute(start, end) {
-
-  const url = `https://api.maptiler.com/routing/v1/driving/${start.join(',')};${end.join(',')}?key=${maptilersdk.config.apiKey}`;
-  const data = await fetch(url).then(r => r.json());
-
-  const route = data.routes[0].geometry;
-
-  if (map.getSource("route")) {
-    map.removeLayer("route");
-    map.removeSource("route");
-  }
-
-  map.addSource("route", {
-    type: "geojson",
-    data: { type: "Feature", geometry: route }
-  });
-
-  map.addLayer({
-    id: "route",
-    type: "line",
-    source: "route",
-    paint: {
-      "line-color": "#ffffff",
-      "line-width": 5
-    }
-  });
+function selectDestination(dest) {
+  resultsDiv.innerHTML = "";
+  map.flyTo({ center: dest, zoom: 17 });
 }
 </script>
 
