--- a/index.html
+++ b/index.html
@@ -2,226 +2,62 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>GTA MiniMap Navi</title>
+<title>Mapa con GPS</title>
 
-<link href="https://cdn.maptiler.com/maptiler-sdk-js/v2.2.0/maptiler-sdk.css" rel="stylesheet"/>
+<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <style>
-body {
-  margin: 0;
-  background: #d9d9d9;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Arial;
-}
-
-#app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-/* búsqueda */
-#searchBar {
-  display: flex;
-  gap: 6px;
-}
-
-input {
-  padding: 10px;
-  width: 230px;
-  border: 2px solid black;
-  background: #f2f2f2;
-}
-
-#results {
-  width: 230px;
-  max-height: 120px;
-  overflow-y: auto;
-  background: white;
-  border: 2px solid black;
-  font-size: 14px;
-}
-
-.resultItem {
-  padding: 6px;
-  cursor: pointer;
-}
-
-.resultItem:hover {
-  background: #ddd;
-}
-
-/* HUD */
-#hud {
-  position: relative;
-  width: 340px;
-  height: 340px;
-}
-
-#mapContainer {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  overflow: hidden;
-  border: 8px solid black;
-  position: relative;
-}
-
-#map {
-  width: 100%;
-  height: 100%;
-}
-
-.maptiler-control-container,
-.maplibregl-control-container,
-.maplibregl-ctrl,
-.maplibregl-ctrl-logo {
-  display: none !important;
-}
-
-/* jugador */
-#player {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(180deg);
-  transition: transform 0.5s ease;
-  pointer-events: none;
-}
-
-#player.perspective {
-  transform: translate(-50%, -50%) rotate(180deg) scaleY(0.7);
-}
-
-/* norte */
-#north {
-  position: absolute;
-  top: -10px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: black;
-  color: white;
-  font-weight: bold;
-  font-size: 22px;
-  padding: 6px 12px;
-  border-radius: 20px;
-}
-
-/* botones */
-.hudButtons {
-  display: flex;
-  gap: 12px;
-}
-
-button {
-  width: 52px;
-  height: 52px;
-  background: black;
-  border: none;
-  border-radius: 50%;
-  cursor: pointer;
-}
+body { margin:0; }
+#map { width:100vw; height:100vh; }
 </style>
 </head>
 
 <body>
 
-<div id="app">
-
-<div id="searchBar">
-  <input id="address" placeholder="Buscar dirección…">
-  <button onclick="searchAddress()">🔍</button>
-</div>
-
-<div id="results"></div>
-
-<div id="hud">
-  <div id="mapContainer">
-    <div id="map"></div>
-
-    <svg id="player" width="22" height="36" viewBox="0 0 34 60">
-      <path d="M17 5 C10 5 5 12 5 18 C5 32 17 55 17 55 C17 55 29 32 29 18 C29 12 24 5 17 5 Z"
-            fill="white"
-            stroke="black"
-            stroke-width="5"/>
-    </svg>
-  </div>
-  <div id="north">N</div>
-</div>
-
-<div class="hudButtons">
-  <button onclick="togglePerspective()">🧭</button>
-  <button onclick="centerGPS()">🎯</button>
-</div>
-
-</div>
-
-<script src="https://cdn.maptiler.com/maptiler-sdk-js/v2.2.0/maptiler-sdk.umd.js"></script>
+<div id="map"></div>
 
 <script>
-maptilersdk.config.apiKey = "TU_API_KEY_AQUI"; // <-- cambia por tu key
 
-let userLocation = null;
-let perspective = false;
-const player = document.getElementById("player");
-const resultsDiv = document.getElementById("results");
+const map = L.map('map').setView([0,0], 2);
 
-const map = new maptilersdk.Map({
-  container: 'map',
-  style: 'streets',
-  center: [-70.648729, -33.447173],
-  zoom: 16,
-  attributionControl: false
-});
+L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  maxZoom: 19
+}).addTo(map);
 
-navigator.geolocation.watchPosition(pos => {
-  userLocation = [pos.coords.longitude, pos.coords.latitude];
-  map.setCenter(userLocation);
-});
+let marker;
 
-function centerGPS() {
-  if (userLocation) map.setCenter(userLocation);
+// GPS seguimiento
+if(navigator.geolocation){
+
+  navigator.geolocation.watchPosition(pos=>{
+
+    const lat = pos.coords.latitude;
+    const lng = pos.coords.longitude;
+
+    map.setView([lat,lng], 18);
+
+    if(!marker){
+      marker = L.circleMarker([lat,lng],{
+        radius:8,
+        color:"blue",
+        fillColor:"blue",
+        fillOpacity:0.8
+      }).addTo(map);
+    } else {
+      marker.setLatLng([lat,lng]);
+    }
+
+  }, err=>{
+    alert("GPS error: " + err.message);
+  }, {
+    enableHighAccuracy:true
+  });
+
+} else {
+  alert("Tu navegador no soporta GPS");
 }
 
-function togglePerspective() {
-  perspective = !perspective;
-  map.easeTo({ pitch: perspective ? 60 : 0, duration: 600 });
-  player.classList.toggle("perspective", perspective);
-}
-
-async function searchAddress() {
-  const text = document.getElementById("address").value;
-  resultsDiv.innerHTML = "Buscando…";
-
-  try {
-    const geo = await fetch(
-      `https://api.maptiler.com/geocoding/${encodeURIComponent(text)}.json?key=${maptilersdk.config.apiKey}`
-    ).then(r => r.json());
-
-    resultsDiv.innerHTML = "";
-
-    geo.features.forEach(f => {
-      const item = document.createElement("div");
-      item.className = "resultItem";
-      item.innerText = f.place_name;
-      item.onclick = () => selectDestination(f.center);
-      resultsDiv.appendChild(item);
-    });
-
-  } catch (e) {
-    resultsDiv.innerHTML = "Error buscando dirección";
-    console.error(e);
-  }
-}
-
-function selectDestination(dest) {
-  resultsDiv.innerHTML = "";
-  map.flyTo({ center: dest, zoom: 17 });
-}
 </script>
 
 </body>
