--- a/index.html
+++ b/index.html
@@ -2,14 +2,60 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapa con GPS</title>
+<title>Mapa + HUD</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <style>
-body { margin:0; }
-#map { width:100vw; height:100vh; }
+body{
+  margin:0;
+  overflow:hidden;
+  font-family:Arial;
+}
+
+#map{
+  position:absolute;
+  width:100%;
+  height:100%;
+  z-index:1;
+}
+
+/* HUD flotante */
+#hud{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:340px;
+  height:340px;
+  border-radius:50%;
+  border:8px solid black;
+  background:transparent;
+  pointer-events:none;
+  z-index:2;
+}
+
+#player{
+  position:absolute;
+  top:50%;
+  left:50%;
+  width:24px;
+  height:40px;
+  transform:translate(-50%,-50%) rotate(180deg);
+}
+
+#north{
+  position:absolute;
+  top:-22px;
+  left:50%;
+  transform:translateX(-50%);
+  background:black;
+  color:white;
+  font-weight:bold;
+  font-size:20px;
+  padding:6px 14px;
+  border-radius:20px;
+}
 </style>
 </head>
 
@@ -17,47 +63,32 @@ body { margin:0; }
 
 <div id="map"></div>
 
+<div id="hud">
+  <svg id="player" viewBox="0 0 34 60">
+    <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z"
+      fill="white" stroke="black" stroke-width="5"/>
+  </svg>
+  <div id="north">N</div>
+</div>
+
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
 <script>
+var map = L.map('map').setView([0,0], 18);
 
-const map = L.map('map').setView([0,0], 2);
-
-L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
   maxZoom: 19
 }).addTo(map);
 
-let marker;
-
-// GPS seguimiento
-if(navigator.geolocation){
-
-  navigator.geolocation.watchPosition(pos=>{
-
-    const lat = pos.coords.latitude;
-    const lng = pos.coords.longitude;
-
-    map.setView([lat,lng], 18);
-
-    if(!marker){
-      marker = L.circleMarker([lat,lng],{
-        radius:8,
-        color:"blue",
-        fillColor:"blue",
-        fillOpacity:0.8
-      }).addTo(map);
-    } else {
-      marker.setLatLng([lat,lng]);
-    }
-
-  }, err=>{
-    alert("GPS error: " + err.message);
-  }, {
-    enableHighAccuracy:true
-  });
-
-} else {
-  alert("Tu navegador no soporta GPS");
-}
-
+navigator.geolocation.watchPosition(function(pos){
+  var lat = pos.coords.latitude;
+  var lon = pos.coords.longitude;
+  map.setView([lat,lon]);
+},
+function(err){
+  alert("GPS no permitido o error");
+},
+{enableHighAccuracy:true});
 </script>
 
 </body>
