--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Mapa dentro del HUD</title>
+<title>HUD mapa correcto</title>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 
@@ -17,18 +17,25 @@ body{
   font-family:Arial;
 }
 
-/* HUD = contenedor circular */
-#hud{
+/* contenedor general */
+#wrapper{
   position:relative;
   width:340px;
   height:340px;
+}
+
+/* HUD circular */
+#hud{
+  position:absolute;
+  width:100%;
+  height:100%;
   border-radius:50%;
   border:8px solid black;
-  overflow:hidden; /* 👈 recorte del mapa */
+  overflow:hidden;
   background:#f2f2f2;
 }
 
-/* mapa dentro del círculo */
+/* mapa */
 #map{
   position:absolute;
   width:100%;
@@ -36,7 +43,7 @@ body{
   z-index:1;
 }
 
-/* flecha jugador */
+/* flecha */
 #player{
   position:absolute;
   top:50%;
@@ -48,7 +55,7 @@ body{
   pointer-events:none;
 }
 
-/* norte */
+/* N fuera del recorte */
 #north{
   position:absolute;
   top:-22px;
@@ -67,15 +74,19 @@ body{
 
 <body>
 
-<div id="hud">
-  <div id="map"></div>
+<div id="wrapper">
 
-  <svg id="player" viewBox="0 0 34 60">
-    <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z"
-      fill="white" stroke="black" stroke-width="5"/>
-  </svg>
+  <div id="hud">
+    <div id="map"></div>
+
+    <svg id="player" viewBox="0 0 34 60">
+      <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z"
+        fill="white" stroke="black" stroke-width="5"/>
+    </svg>
+  </div>
 
   <div id="north">N</div>
+
 </div>
 
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -95,8 +106,8 @@ navigator.geolocation.watchPosition(function(pos){
   var lon = pos.coords.longitude;
   map.setView([lat,lon]);
 },
-function(err){
-  alert("GPS no permitido");
+function(){
+  alert("Activa el GPS");
 },
 {enableHighAccuracy:true});
 </script>
