--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body{
   z-index:1;
 }
 
-/* flecha */
+/* flecha jugador */
 #player{
   position:absolute;
   top:50%;
@@ -55,10 +55,10 @@ body{
   pointer-events:none;
 }
 
-/* N fuera del recorte */
+/* norte */
 #north{
   position:absolute;
-  top:-22px;
+  top:-10px; /* ← ajustado */
   left:50%;
   transform:translateX(-50%);
   background:black;
