--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>HUD Mapa Estilo GTA - Santiago</title>
+    <title>HUD Mapa Pro - Santiago</title>
 
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
@@ -16,6 +16,8 @@
             align-items: center;
             height: 100vh;
             font-family: Arial;
+            overflow: hidden;
+            touch-action: none;
         }
 
         #wrapper {
@@ -42,13 +44,12 @@
             z-index: 1;
         }
 
-        /* FLECHA: Forma original, pero altura reducida */
         #player {
             position: absolute;
             top: 50%;
             left: 50%;
             width: 22px; 
-            height: 28px; /* Altura ajustada para que no sea larga */
+            height: 28px; 
             transform: translate(-50%, -50%) rotate(180deg); 
             z-index: 10;
             pointer-events: none;
@@ -71,18 +72,16 @@
     </style>
 </head>
 
-<body>
+<body onclick="requestCompassPermission()">
 
 <div id="wrapper">
     <div id="hud">
         <div id="map"></div>
-
         <svg id="player" viewBox="0 0 34 50">
             <path d="M17 2 C9 2 3 10 3 18 C3 30 17 45 17 45 C17 45 31 30 31 18 C31 10 25 2 17 2 Z"
                   fill="white" stroke="black" stroke-width="4"/>
         </svg>
     </div>
-
     <div id="north">N</div>
 </div>
 
@@ -104,22 +103,21 @@
         style: 'https://tiles.openfreemap.org/styles/bright', 
         center: [-70.6483, -33.4569], 
         zoom: 17.5, 
-        pitch: 0, // Mapa plano
+        pitch: 0,
+        bearing: 0, // Inicia apuntando al norte
         attributionControl: false
     });
 
     map.on('style.load', () => {
         map.setPaintProperty('background', 'background-color', paleta.tierra_general);
-        
         if (map.getLayer('building')) {
             map.setPaintProperty('building', 'fill-color', paleta.edificios);
             map.setPaintProperty('building', 'fill-outline-color', '#000000');
         }
-
+        // Aplicar paleta a las demás capas...
         map.getStyle().layers.forEach(layer => {
             if (map.getLayer('water')) map.setPaintProperty('water', 'fill-color', paleta.agua);
             if (map.getLayer('park')) map.setPaintProperty('park', 'fill-color', paleta.parques);
-
             const esVia = layer.id.includes('highway') || layer.id.includes('bridge') || layer.id.includes('tunnel');
             if (layer.type === 'line' && esVia) {
                 const esSendero = layer.id.includes('path') || layer.id.includes('footway') || layer.id.includes('track');
@@ -131,19 +129,40 @@
                     map.setPaintProperty(layer.id, 'line-width', ['interpolate', ['linear'], ['zoom'], 14, 2, 18, 8]);
                 }
             }
-            
-            if (layer.type === 'symbol' && layer.layout && layer.layout['text-field']) {
-                map.setPaintProperty(layer.id, 'text-color', paleta.texto_suave);
-                map.setPaintProperty(layer.id, 'text-halo-color', 'rgba(0,0,0,0.5)');
-            }
         });
     });
 
+    // GEOLOCALIZACIÓN (Posición)
     if (navigator.geolocation) {
         navigator.geolocation.watchPosition(pos => {
             const { latitude: lat, longitude: lng } = pos.coords;
-            map.setCenter([lng, lat]);
+            map.jumpTo({ center: [lng, lat] }); // jumpTo es más suave para GPS
         }, null, { enableHighAccuracy: true });
+    }
+
+    // ROTACIÓN (Brújula)
+    function handleOrientation(event) {
+        let heading = event.webkitCompassHeading || (360 - event.alpha);
+        if (heading) {
+            // Rotamos el mapa para que lo que esté "adelante" sea hacia donde mira el usuario
+            map.setBearing(heading);
+            // La etiqueta "N" del HUD debe rotar en sentido contrario para marcar siempre el norte real
+            document.getElementById('north').style.transform = `translateX(-50%) rotate(${-heading}deg)`;
+        }
+    }
+
+    function requestCompassPermission() {
+        if (typeof DeviceOrientationEvent.requestPermission === 'function') {
+            DeviceOrientationEvent.requestPermission()
+                .then(response => {
+                    if (response == 'granted') {
+                        window.addEventListener('deviceorientation', handleOrientation);
+                    }
+                })
+                .catch(console.error);
+        } else {
+            window.addEventListener('deviceorientation', handleOrientation);
+        }
     }
 </script>
 
