--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             overflow: hidden;
             background: #38692d; 
             box-shadow: 0 0 20px rgba(0,0,0,0.3);
+            z-index: 1;
         }
 
         #map {
@@ -56,29 +57,32 @@
             filter: drop-shadow(0 2px 3px rgba(0,0,0,0.4));
         }
 
-        /* CONTENEDOR DE LA N: Ocupa todo el HUD y rota sobre el centro */
+        /* ÓRBITA DE LA BRÚJULA */
         #north-orbit {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 11;
+            z-index: 20; /* Por encima del borde del HUD */
             pointer-events: none;
-            transition: transform 0.1s linear; /* Suaviza el movimiento */
+            transition: transform 0.1s linear;
         }
 
+        /* LA N: Posicionada 50% afuera y 50% adentro */
         #north {
             position: absolute;
-            top: -10px;
+            top: 0; /* Ajustado para que el centro de la etiqueta coincida con el borde */
             left: 50%;
-            transform: translateX(-50%);
+            transform: translate(-50%, -50%); /* Centra la etiqueta sobre el borde superior */
             background: black;
             color: white;
             font-weight: bold;
             font-size: 20px;
             padding: 6px 14px;
             border-radius: 20px;
+            border: 2px solid white; /* Un borde fino para que resalte si toca colores oscuros */
+            box-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
     </style>
 </head>
@@ -93,10 +97,10 @@
             <path d="M17 2 C9 2 3 10 3 18 C3 30 17 45 17 45 C17 45 31 30 31 18 C31 10 25 2 17 2 Z"
                   fill="white" stroke="black" stroke-width="4"/>
         </svg>
+    </div>
 
-        <div id="north-orbit">
-            <div id="north">N</div>
-        </div>
+    <div id="north-orbit">
+        <div id="north">N</div>
     </div>
 </div>
 
@@ -121,7 +125,7 @@
         pitch: 0,
         bearing: 0,
         attributionControl: false,
-        interactive: false // Recomendado para que no interfiera con la brújula
+        interactive: false 
     });
 
     map.on('style.load', () => {
@@ -158,11 +162,8 @@
     function handleOrientation(event) {
         let heading = event.webkitCompassHeading || (360 - event.alpha);
         if (heading !== undefined) {
-            // 1. El mapa rota para mostrar lo que tienes adelante
             map.setBearing(heading);
-            
-            // 2. La N rota en sentido CONTRARIO para quedarse siempre en el Norte real
-            // Al rotar el contenedor 'north-orbit', la N se desplaza por el borde
+            // Rotación suave de la N orbitando el margen
             document.getElementById('north-orbit').style.transform = `rotate(${-heading}deg)`;
         }
     }
