--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>HUD Mapa Pro - Santiago</title>
+    <title>HUD Mapa Pro - Margen Delgado</title>
 
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
 
     <style>
+        :root {
+            --hud-size: 85vw; 
+            --max-size: 550px;
+        }
+
         body {
             margin: 0;
             background: #e5e5e5;
@@ -15,15 +20,17 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            font-family: Arial;
+            font-family: Arial, sans-serif;
             overflow: hidden;
             touch-action: none;
         }
 
         #wrapper {
             position: relative;
-            width: 340px;
-            height: 340px;
+            width: var(--hud-size);
+            height: var(--hud-size);
+            max-width: var(--max-size);
+            max-height: var(--max-size);
         }
 
         #hud {
@@ -31,11 +38,13 @@
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            border: 8px solid black;
+            /* MARGEN REDUCIDO: Ahora es mucho más fino */
+            border: calc(var(--hud-size) * 0.015) solid black; 
             overflow: hidden;
             background: #38692d; 
-            box-shadow: 0 0 20px rgba(0,0,0,0.3);
+            box-shadow: 0 5px 25px rgba(0,0,0,0.2);
             z-index: 1;
+            box-sizing: border-box;
         }
 
         #map {
@@ -49,15 +58,14 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 22px; 
-            height: 28px; 
+            width: 7%; 
+            height: auto;
             transform: translate(-50%, -50%) rotate(180deg); 
             z-index: 10;
             pointer-events: none;
-            filter: drop-shadow(0 2px 3px rgba(0,0,0,0.4));
+            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.4));
         }
 
-        /* ÓRBITA DE LA BRÚJULA */
         #north-orbit {
             position: absolute;
             top: 0;
@@ -69,7 +77,6 @@
             transition: transform 0.1s linear;
         }
 
-        /* LA N: Sin borde blanco y con contenedor más ajustado */
         #north {
             position: absolute;
             top: 0;
@@ -78,11 +85,18 @@
             background: black;
             color: white;
             font-weight: bold;
-            font-size: 18px; /* Un pelín más pequeña para que sea armónica */
-            padding: 4px 10px; /* Padding más ajustado */
-            border-radius: 12px; /* Radio reducido para que sea más rectangular/ovalado justo */
-            box-shadow: 0 2px 5px rgba(0,0,0,0.5);
-            border: none; /* Sin borde blanco */
+            font-size: calc(var(--hud-size) * 0.05); 
+            padding: 1.5% 3.5%; 
+            border-radius: 100px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            border: none;
+            white-space: nowrap;
+        }
+
+        /* Ajuste para que el borde no se vea gigante en PC */
+        @media (min-width: 650px) {
+            #hud { border-width: 6px; }
+            #north { font-size: 22px; padding: 6px 14px; }
         }
     </style>
 </head>
@@ -108,13 +122,11 @@
     const paleta = {
         agua: '#7088b0',
         tierra_general: '#38692d',
-        tierra_natural: '#386c28',
         urbano: '#989898',
         parques: '#788c40',
         edificios: '#FFFFFF',
         calles_negras: '#000000',
-        senderos_marron: '#A78C6A',
-        texto_suave: '#E0E0E0'
+        senderos_marron: '#A78C6A'
     };
 
     const map = new maplibregl.Map({
@@ -146,7 +158,7 @@
                     map.setPaintProperty(layer.id, 'line-width', 3);
                 } else {
                     map.setPaintProperty(layer.id, 'line-color', paleta.calles_negras);
-                    map.setPaintProperty(layer.id, 'line-width', ['interpolate', ['linear'], ['zoom'], 14, 2, 18, 8]);
+                    map.setPaintProperty(layer.id, 'line-width', ['interpolate', ['linear'], ['zoom'], 14, 2, 18, 10]);
                 }
             }
         });
