--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ body {
     align-items: center;
     height: 100vh;
     font-family: 'Segoe UI', Arial, sans-serif;
-    overflow: visible; /* FIX para que no corte la N */
-    padding-top: 40px; /* espacio invisible */
+    overflow: visible;
+    padding-top: 40px;
     box-sizing: border-box;
 }
 
@@ -54,7 +54,6 @@ body {
     z-index: 1;
 }
 
-/* Flecha */
 #player {
     position: absolute;
     top: 50%;
@@ -66,7 +65,6 @@ body {
     filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
 }
 
-/* Órbita N */
 #north-orbit {
     position: absolute;
     top: 0;
@@ -78,7 +76,6 @@ body {
     transition: transform 0.1s linear;
 }
 
-/* N */
 #north {
     position: absolute;
     top: 0;
@@ -104,122 +101,163 @@ body {
 <body onclick="requestPermissions()">
 
 <div id="wrapper">
-    <div id="hud">
-        <div id="map"></div>
+<div id="hud">
+<div id="map"></div>
 
-        <svg id="player" viewBox="0 0 34 50">
-            <path d="M17 2 C9 2 3 10 3 18 C3 30 17 45 17 45 C17 45 31 30 31 18 C31 10 25 2 17 2 Z"
-            fill="white" stroke="black" stroke-width="4"/>
-        </svg>
-    </div>
+<svg id="player" viewBox="0 0 34 50">
+<path d="M17 2 C9 2 3 10 3 18 C3 30 17 45 17 45 C17 45 31 30 31 18 C31 10 25 2 17 2 Z"
+fill="white" stroke="black" stroke-width="4"/>
+</svg>
+</div>
 
-    <div id="north-orbit">
-        <div id="north">N</div>
-    </div>
+<div id="north-orbit">
+<div id="north">N</div>
+</div>
 </div>
 
 <script>
 const paleta = {
-    agua: '#7088b0',
-    tierra_general: '#38692d',
-    urbano: '#989898',
-    parques: '#788c40',
-    edificios: '#FFFFFF',
-    calles_negras: '#000000',
-    senderos_marron: '#A78C6A'
+agua: '#7088b0',
+tierra_general: '#38692d',
+urbano: '#989898',
+parques: '#788c40',
+edificios: '#FFFFFF',
+calles_negras: '#000000',
+senderos_marron: '#A78C6A'
 };
 
 const map = new maplibregl.Map({
-    container: 'map',
-    style: 'https://tiles.openfreemap.org/styles/bright',
-    center: [-70.6483, -33.4569],
-    zoom: 18,
-    pitch: 0,
-    bearing: 0,
-    attributionControl: false,
-    interactive: false
+container: 'map',
+style: 'https://tiles.openfreemap.org/styles/bright',
+center: [-70.6483, -33.4569],
+zoom: 18,
+pitch: 0,
+bearing: 0,
+attributionControl: false,
+interactive: false
 });
 
 map.on('style.load', () => {
-    map.setPaintProperty('background', 'background-color', paleta.tierra_general);
+map.setPaintProperty('background', 'background-color', paleta.tierra_general);
 
-    if (map.getLayer('building')) {
-        map.setPaintProperty('building', 'fill-color', paleta.edificios);
-        map.setPaintProperty('building', 'fill-outline-color', '#000000');
-    }
-
-    map.getStyle().layers.forEach(layer => {
-        if (map.getLayer('water')) map.setPaintProperty('water', 'fill-color', paleta.agua);
-        if (map.getLayer('park')) map.setPaintProperty('park', 'fill-color', paleta.parques);
-
-        const esVia = layer.id.includes('highway') || layer.id.includes('bridge') || layer.id.includes('tunnel');
-
-        if (layer.type === 'line' && esVia) {
-            const esSendero = layer.id.includes('path') || layer.id.includes('footway') || layer.id.includes('track');
-
-            if (esSendero) {
-                map.setPaintProperty(layer.id, 'line-color', paleta.senderos_marron);
-                map.setPaintProperty(layer.id, 'line-width', 3);
-            } else {
-                map.setPaintProperty(layer.id, 'line-color', paleta.calles_negras);
-                map.setPaintProperty(layer.id, 'line-width', ['interpolate', ['linear'], ['zoom'], 14, 2, 18, 10]);
-            }
-        }
-    });
-});
-
-/* GPS */
-const geoOptions = {
-    enableHighAccuracy: true,
-    timeout: 15000,
-    maximumAge: 0
-};
-
-function startTracking() {
-    if (navigator.geolocation) {
-        navigator.geolocation.watchPosition(pos => {
-            const { latitude: lat, longitude: lng, speed } = pos.coords;
-
-            const speedKmh = speed ? speed * 3.6 : 0;
-            let dynamicZoom = 18 - (speedKmh / 25);
-
-            if (dynamicZoom < 15.5) dynamicZoom = 15.5;
-            if (dynamicZoom > 18) dynamicZoom = 18;
-
-            map.easeTo({
-                center: [lng, lat],
-                zoom: dynamicZoom,
-                duration: 1200
-            });
-
-        }, err => console.error("Error GPS:", err), geoOptions);
-    }
+if (map.getLayer('building')) {
+map.setPaintProperty('building', 'fill-color', paleta.edificios);
+map.setPaintProperty('building', 'fill-outline-color', '#000000');
 }
 
-/* Brújula */
-function handleOrientation(event) {
-    let heading = event.webkitCompassHeading || (360 - event.alpha);
+map.getStyle().layers.forEach(layer => {
+if (map.getLayer('water'))
+map.setPaintProperty('water', 'fill-color', paleta.agua);
 
-    if (heading !== undefined) {
-        map.setBearing(heading);
-        document.getElementById('north-orbit').style.transform = `rotate(${-heading}deg)`;
-    }
+if (map.getLayer('park'))
+map.setPaintProperty('park', 'fill-color', paleta.parques);
+
+const esVia = layer.id.includes('highway') ||
+layer.id.includes('bridge') ||
+layer.id.includes('tunnel');
+
+if (layer.type === 'line' && esVia) {
+const esSendero = layer.id.includes('path') ||
+layer.id.includes('footway') ||
+layer.id.includes('track');
+
+if (esSendero) {
+map.setPaintProperty(layer.id, 'line-color', paleta.senderos_marron);
+map.setPaintProperty(layer.id, 'line-width', 3);
+} else {
+map.setPaintProperty(layer.id, 'line-color', paleta.calles_negras);
+map.setPaintProperty(layer.id, 'line-width',
+['interpolate', ['linear'], ['zoom'], 14, 2, 18, 10]);
+}
+}
+});
+});
+
+/* GPS SUAVIZADO */
+const geoOptions = {
+enableHighAccuracy: true,
+timeout: 15000,
+maximumAge: 0
+};
+
+let smoothLat = null;
+let smoothLng = null;
+const smoothing = 0.18;
+
+function smoothGPS(lat, lng) {
+if (smoothLat === null) {
+smoothLat = lat;
+smoothLng = lng;
+} else {
+smoothLat = smoothLat * (1 - smoothing) + lat * smoothing;
+smoothLng = smoothLng * (1 - smoothing) + lng * smoothing;
+}
+return [smoothLat, smoothLng];
+}
+
+function startTracking() {
+navigator.geolocation.watchPosition(pos => {
+
+const rawLat = pos.coords.latitude;
+const rawLng = pos.coords.longitude;
+const speed = pos.coords.speed;
+
+const [lat, lng] = smoothGPS(rawLat, rawLng);
+
+const speedKmh = speed ? speed * 3.6 : 0;
+let dynamicZoom = 18 - (speedKmh / 25);
+
+if (dynamicZoom < 15.5) dynamicZoom = 15.5;
+if (dynamicZoom > 18) dynamicZoom = 18;
+
+map.easeTo({
+center: [lng, lat],
+zoom: dynamicZoom,
+duration: 900
+});
+
+}, err => console.error("Error GPS:", err), geoOptions);
+}
+
+/* Brújula CORREGIDA */
+let smoothHeading = 0;
+const headingSmooth = 0.15;
+
+function handleOrientation(event) {
+let rawHeading;
+
+if (event.webkitCompassHeading !== undefined) {
+rawHeading = event.webkitCompassHeading;
+} else if (event.alpha !== null) {
+rawHeading = 360 - event.alpha;
+}
+
+if (rawHeading === undefined) return;
+
+smoothHeading =
+smoothHeading * (1 - headingSmooth) +
+rawHeading * headingSmooth;
+
+map.setBearing(smoothHeading);
+document.getElementById('north-orbit').style.transform =
+`rotate(${-smoothHeading}deg)`;
 }
 
 function requestPermissions() {
-    startTracking();
+startTracking();
 
-    if (typeof DeviceOrientationEvent !== 'undefined' && typeof DeviceOrientationEvent.requestPermission === 'function') {
-        DeviceOrientationEvent.requestPermission()
-        .then(response => {
-            if (response === 'granted') {
-                window.addEventListener('deviceorientation', handleOrientation);
-            }
-        })
-        .catch(console.error);
-    } else {
-        window.addEventListener('deviceorientation', handleOrientation);
-    }
+if (typeof DeviceOrientationEvent !== 'undefined' &&
+typeof DeviceOrientationEvent.requestPermission === 'function') {
+DeviceOrientationEvent.requestPermission()
+.then(response => {
+if (response === 'granted') {
+window.addEventListener('deviceorientation', handleOrientation);
+}
+})
+.catch(console.error);
+} else {
+window.addEventListener('deviceorientation', handleOrientation);
+}
 }
 </script>
 
